--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                 <!-- Wyniki dla każdej osoby pojawią się tutaj -->
             </ul>
             <p id="infoZamawiajacy"></p>
+            <p id="wartoscCalkowita"></p> <!-- DODANY ELEMENT -->
         </div>
     </div>
 
