--- a/index.html
+++ b/index.html
@@ -10,29 +10,37 @@
     <div class="container">
         <h1>Kalkulator zamówień Pyszne.pl</h1>
 
-        <div class="input-group">
-            <label for="liczbaOsob">Liczba osób (włącznie z zamawiającym):</label>
-            <input type="number" id="liczbaOsob" min="1" value="1">
-        </div>
+        <fieldset id="formularzZamowienia">
+            <div class="input-group">
+                <label for="liczbaOsob">Liczba osób (włącznie z zamawiającym, max 10):</label>
+                <input type="number" id="liczbaOsob" min="1" max="10" value="1">
+            </div>
 
-        <div id="kwotyZamowienContainer">
-            <!-- Pola na kwoty zamówień będą generowane dynamicznie -->
-        </div>
+            <div id="kwotyZamowienContainer">
+                <!-- Pola na kwoty zamówień będą generowane dynamicznie -->
+            </div>
 
-        <div class="input-group">
-            <label for="kosztDostawy">Koszt dostawy (zł):</label>
-            <input type="number" id="kosztDostawy" min="0" step="0.01" value="0">
-        </div>
+            <div class="input-group">
+                <label for="kosztDostawy">Koszt dostawy (zł):</label>
+                <input type="number" id="kosztDostawy" min="0" step="0.10" value="0"> <!-- Zmieniony step -->
+            </div>
+        </fieldset>
 
         <button id="obliczBtn">Oblicz rozliczenie</button>
 
-        <div id="wyniki">
+        <div class="button-group post-calculate" id="przyciskiAkcji" style="display: none;">
+             <button id="kontynuujBtn">Kontynuuj edycję</button>
+             <button id="wyczyscBtn" class="secondary">Wyczyść i zacznij od nowa</button>
+        </div>
+
+
+        <div id="wyniki" style="display: none;">
             <h2>Wyniki rozliczenia:</h2>
             <ul id="listaWynikow">
                 <!-- Wyniki dla każdej osoby pojawią się tutaj -->
             </ul>
             <p id="infoZamawiajacy"></p>
-            <p id="wartoscCalkowita"></p> <!-- DODANY ELEMENT -->
+            <p id="wartoscCalkowita"></p>
         </div>
     </div>
 
