--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
             </div>
 
             <div id="kwotyZamowienContainer">
-                <!-- Pola na kwoty zamówień będą generowane dynamicznie -->
+                <!-- Pola na kwoty zamówień i maks. wkład będą generowane dynamicznie -->
             </div>
 
             <div class="input-group">
                 <label for="kosztDostawy">Koszt dostawy (zł):</label>
-                <input type="number" id="kosztDostawy" min="0" step="0.10" value="0"> <!-- Zmieniony step -->
+                <input type="number" id="kosztDostawy" min="0" step="0.10" value="0">
             </div>
         </fieldset>
 
@@ -36,6 +36,7 @@
 
         <div id="wyniki" style="display: none;">
             <h2>Wyniki rozliczenia:</h2>
+            <p id="dostepneSaldoInfo"></p> <!-- Dodane pole na info o saldzie -->
             <ul id="listaWynikow">
                 <!-- Wyniki dla każdej osoby pojawią się tutaj -->
             </ul>
